# ros2_ws

ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/crane_x7/share/crane_x7/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/crane_x7_control/share/crane_x7_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/crane_x7_description/share/crane_x7_description/: package.ps1  package.sh
ros2_ws/src/crane_x7_description/: README.en.md  README.md
ros2_ws/src/crane_x7_description/test/: test_robot_description_loader.py
ros2_ws/src/crane_x7_description/urdf/: crane_x7.ros2_control.xacro
ros2_ws/src/crane_x7_ros/: README.en.md  README.md  pick_example04.py
ros2_ws/src/crane_x7_ros/crane_x7/: CHANGELOG.rst
ros2_ws/src/crane_x7_ros/crane_x7_control/: CHANGELOG.rst  README.md
ros2_ws/src/crane_x7_ros/crane_x7_examples/: CHANGELOG.rst  README.md  package.xml
ros2_ws/src/crane_x7_ros/crane_x7_examples_py/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/crane_x7_ros/crane_x7_examples_py/config/: crane_x7_moveit_py_examples.yaml
ros2_ws/src/crane_x7_ros/crane_x7_examples_py/crane_x7_examples_py/: aruco_detection.py  joint_values.py
ros2_ws/src/crane_x7_ros/crane_x7_examples_py/launch/: camera_example.launch.py
ros2_ws/src/crane_x7_ros/crane_x7_gazebo/: CHANGELOG.rst  README.md
ros2_ws/src/crane_x7_ros/crane_x7_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md
(+71 files in other folders)
